crates/proto-flow/tests/snapshots/regression__capture_request_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_catalogue(ex_capture_requests())
---
// spec
|0a150807 12117b22 73706563 223a2263| ......{"spec":"c 00000000
|6f6e6669 67227d|                     onfig"}          00000010
                                                       00000017

// discover
|12780807 12157b22 64697363 6f766572| .x....{"discover 00000000
|223a2263 6f6e6669 67227d1a 10646973| ":"config"}..dis 00000010
|636f7665 722f6361 70747572 65220a32| cover/capture".2 00000020
|3032352d 30372d30 392a280a 0f61636d| 025-07-09*(..acm 00000030
|65436f2f 70617373 776f7264 12152f63| eCo/password../c 00000040
|72656465 6e746961 6c732f70 61737377| redentials/passw 00000050
|6f72642a 150a1361 636d6543 6f2f7768| ord*...acmeCo/wh 00000060
|6f6c652d 636f6e66 6967|              ole-config       00000070
                                                       0000007a

// validate
|1afa040a 1076616c 69646174 652f6361| .....validate/ca 00000000
|70747572 6510071a 157b2276 616c6964| pture....{"valid 00000010
|61746522 3a22636f 6e666967 227d22fe| ate":"config"}". 00000020
|030a157b 22726573 6f757263 65223a22| ...{"resource":" 00000030
|636f6e66 6967227d 12e2030a 1161636d| config"}.....acm 00000040
|65436f2f 636f6c6c 65637469 6f6e1a08| eCo/collection.. 00000050
|2f6b6579 2f6f6e65 1a082f6b 65792f74| /key/one../key/t 00000060
|776f220b 2f5f6d65 74612f75 7569642a| wo"./_meta/uuid* 00000070
|04747970 652a0672 6567696f 6e32c001| .type*.region2.. 00000080
|0a092f6a 736f6e2f 70747212 07612d66| ../json/ptr..a-f 00000090
|69656c64 200132a7 010a0769 6e746567| ield .2....integ 000000a0
|65720a06 73747269 6e671a2e 1a037479| er..string....ty 000000b0
|70220464 61746530 b9603a03 656e6342| p".date0.`:.encB 000000c0
|03313030 4a143138 34343637 34343037| .100J.1844674407 000000d0
|33373039 35353136 31352205 7469746c| 3709551615".titl 000000e0
|652a0464 65736332 0e7b2264 6566223a| e*.desc2.{"def": 000000f0
|2261756c 74227d40 014a0b08 01110000| "ault"}@.J...... 00000100
|00000040 8fc05215 080a1001 18142204| ...@..R.......". 00000110
|6e756c6c 2207696e 74656765 725a0b22| null".integerZ." 00000120
|636f6e73 742d6f6e 65225a0b 22636f6e| const-one"Z."con 00000130
|73742d74 776f2260 06680372 03747970| st-two"`.h.r.typ 00000140
|3a0e7b22 61636b22 3a227472 7565227d| :.{"ack":"true"} 00000150
|42127b22 77726974 65223a22 73636865| B.{"write":"sche 00000160
|6d61227d 4aa3010a 12706172 74697469| ma"}J....partiti 00000170
|6f6e2f74 656d706c 61746510 031a400a| on/template...@. 00000180
|1e0a0f65 73747561 72792e64 65762f66| ...estuary.dev/f 00000190
|6f6f120b 6c616265 6c2d7661 6c75650a| oo..label-value. 000001a0
|1e0a0f65 73747561 72792e64 65762f62| ...estuary.dev/b 000001b0
|6172120b 6f746865 722d7661 6c756522| ar..other-value" 000001c0
|4208e9ec 0610031a 1273333a 2f2f6275| B........s3://bu 000001d0
|636b6574 2f707265 66697822 0308ac02| cket/prefix".... 000001e0
|3207083e 1080e59a 773a1850 6174687b| 2..>....w:.Path{ 000001f0
|7b506f73 74666978 2e54656d 706c6174| {Postfix.Templat 00000200
|657d7d30 0438cfb0 f5015a11 7b227265| e}}0.8....Z.{"re 00000210
|6164223a 22736368 656d6122 7d180132| ad":"schema"}..2 00000220
|0b31313a 32323a33 333a3434 42280a0f| .11:22:33:44B(.. 00000230
|61636d65 436f2f70 61737377 6f726412| acmeCo/password. 00000240
|152f6372 6564656e 7469616c 732f7061| ./credentials/pa 00000250
|7373776f 72644215 0a136163 6d65436f| sswordB...acmeCo 00000260
|2f77686f 6c652d63 6f6e6669 67|       /whole-config    00000270
                                                       0000027d

// apply
|22ee070a b5070a0e 61636d65 436f2f63| ".......acmeCo/c 00000000
|61707475 72651007 1a197b22 63617074| apture....{"capt 00000010
|75726522 3a7b2263 6f6e6669 67223a34| ure":{"config":4 00000020
|327d7d22 a2040a15 7b227265 736f7572| 2}}"....{"resour 00000030
|6365223a 22636f6e 66696722 7d120473| ce":"config"}..s 00000040
|6f6d6512 04706174 681ae203 0a116163| ome..path.....ac 00000050
|6d65436f 2f636f6c 6c656374 696f6e1a| meCo/collection. 00000060
|082f6b65 792f6f6e 651a082f 6b65792f| ./key/one../key/ 00000070
|74776f22 0b2f5f6d 6574612f 75756964| two"./_meta/uuid 00000080
|2a047479 70652a06 72656769 6f6e32c0| *.type*.region2. 00000090
|010a092f 6a736f6e 2f707472 1207612d| .../json/ptr..a- 000000a0
|6669656c 64200132 a7010a07 696e7465| field .2....inte 000000b0
|6765720a 06737472 696e671a 2e1a0374| ger..string....t 000000c0
|79702204 64617465 30b9603a 03656e63| yp".date0.`:.enc 000000d0
|42033130 304a1431 38343436 37343430| B.100J.184467440 000000e0
|37333730 39353531 36313522 05746974| 73709551615".tit 000000f0
|6c652a04 64657363 320e7b22 64656622| le*.desc2.{"def" 00000100
|3a226175 6c74227d 40014a0b 08011100| :"ault"}@.J..... 00000110
|00000000 408fc052 15080a10 01181422| ....@..R......." 00000120
|046e756c 6c220769 6e746567 65725a0b| .null".integerZ. 00000130
|22636f6e 73742d6f 6e65225a 0b22636f| "const-one"Z."co 00000140
|6e73742d 74776f22 60066803 72037479| nst-two"`.h.r.ty 00000150
|703a0e7b 2261636b 223a2274 72756522| p:.{"ack":"true" 00000160
|7d42127b 22777269 7465223a 22736368| }B.{"write":"sch 00000170
|656d6122 7d4aa301 0a127061 72746974| ema"}J....partit 00000180
|696f6e2f 74656d70 6c617465 10031a40| ion/template...@ 00000190
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 000001a0
|666f6f12 0b6c6162 656c2d76 616c7565| foo..label-value 000001b0
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 000001c0
|62617212 0b6f7468 65722d76 616c7565| bar..other-value 000001d0
|224208e9 ec061003 1a127333 3a2f2f62| "B........s3://b 000001e0
|75636b65 742f7072 65666978 220308ac| ucket/prefix"... 000001f0
|02320708 3e1080e5 9a773a18 50617468| .2..>....w:.Path 00000200
|7b7b506f 73746669 782e5465 6d706c61| {{Postfix.Templa 00000210
|74657d7d 300438cf b0f5015a 117b2272| te}}0.8....Z.{"r 00000220
|65616422 3a227363 68656d61 227d2003| ead":"schema"} . 00000230
|2a166125 32466364 63253246 7461626c| *.a%2Fcdc%2Ftabl 00000240
|652b6261 7a2e7633 28ac0232 80010a0e| e+baz.v3(..2.... 00000250
|73686172 642f7465 6d706c61 74651a0f| shard/template.. 00000260
|7265636f 76657279 2f707265 66697822| recovery/prefix" 00000270
|0b68696e 742f7072 65666978 28033202| .hint/prefix(.2. 00000280
|083c4801 52400a1e 0a0f6573 74756172| .<H.R@....estuar 00000290
|792e6465 762f666f 6f120b6c 6162656c| y.dev/foo..label 000002a0
|2d76616c 75650a1e 0a0f6573 74756172| -value....estuar 000002b0
|792e6465 762f6261 72120b6f 74686572| y.dev/bar..other 000002c0
|2d76616c 7565608c dc0268e9 ec063a38| -value`...h...:8 000002d0
|0a117265 636f7665 72792f74 656d706c| ..recovery/templ 000002e0
|61746510 03222108 80804010 041a1473| ate.."!...@....s 000002f0
|333a2f2f 6275636b 65742f72 65636f76| 3://bucket/recov 00000300
|65727922 0308ac02 420c0890 3f120568| ery"....B...?..h 00000310
|74747073 18014203 08a84652 11746573| ttps..B...FR.tes 00000320
|742d6361 70747572 652d7361 6c745a0a| t-capture-saltZ. 00000330
|32303235 2d30372d 30396a28 0a0f6163| 2025-07-09j(..ac 00000340
|6d65436f 2f706173 73776f72 6412152f| meCo/password../ 00000350
|63726564 656e7469 616c732f 70617373| credentials/pass 00000360
|776f7264 6a150a13 61636d65 436f2f77| wordj...acmeCo/w 00000370
|686f6c65 2d636f6e 66696772 2e080112| hole-configr.... 00000380
|2a0a1261 70692e61 636d6563 6f2e6578| *..api.acmeco.ex 00000390
|616d706c 650a142a 2e737663 2e61636d| ample..*.svc.acm 000003a0
|65636f2e 6578616d 706c6512 0b31313a| eco.example..11: 000003b0
|32323a33 333a3434 2a0b3030 3a31313a| 22:33:44*.00:11: 000003c0
|32323a33 33321a7b 22636f6e 6e656374| 22:332.{"connect 000003d0
|6f72223a 7b227374 61746522 3a34327d| or":{"state":42} 000003e0
|7d|                                  }                000003f0
                                                       000003f1

// open
|2aa6080a b5070a0e 61636d65 436f2f63| *.......acmeCo/c 00000000
|61707475 72651007 1a197b22 63617074| apture....{"capt 00000010
|75726522 3a7b2263 6f6e6669 67223a34| ure":{"config":4 00000020
|327d7d22 a2040a15 7b227265 736f7572| 2}}"....{"resour 00000030
|6365223a 22636f6e 66696722 7d120473| ce":"config"}..s 00000040
|6f6d6512 04706174 681ae203 0a116163| ome..path.....ac 00000050
|6d65436f 2f636f6c 6c656374 696f6e1a| meCo/collection. 00000060
|082f6b65 792f6f6e 651a082f 6b65792f| ./key/one../key/ 00000070
|74776f22 0b2f5f6d 6574612f 75756964| two"./_meta/uuid 00000080
|2a047479 70652a06 72656769 6f6e32c0| *.type*.region2. 00000090
|010a092f 6a736f6e 2f707472 1207612d| .../json/ptr..a- 000000a0
|6669656c 64200132 a7010a07 696e7465| field .2....inte 000000b0
|6765720a 06737472 696e671a 2e1a0374| ger..string....t 000000c0
|79702204 64617465 30b9603a 03656e63| yp".date0.`:.enc 000000d0
|42033130 304a1431 38343436 37343430| B.100J.184467440 000000e0
|37333730 39353531 36313522 05746974| 73709551615".tit 000000f0
|6c652a04 64657363 320e7b22 64656622| le*.desc2.{"def" 00000100
|3a226175 6c74227d 40014a0b 08011100| :"ault"}@.J..... 00000110
|00000000 408fc052 15080a10 01181422| ....@..R......." 00000120
|046e756c 6c220769 6e746567 65725a0b| .null".integerZ. 00000130
|22636f6e 73742d6f 6e65225a 0b22636f| "const-one"Z."co 00000140
|6e73742d 74776f22 60066803 72037479| nst-two"`.h.r.ty 00000150
|703a0e7b 2261636b 223a2274 72756522| p:.{"ack":"true" 00000160
|7d42127b 22777269 7465223a 22736368| }B.{"write":"sch 00000170
|656d6122 7d4aa301 0a127061 72746974| ema"}J....partit 00000180
|696f6e2f 74656d70 6c617465 10031a40| ion/template...@ 00000190
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 000001a0
|666f6f12 0b6c6162 656c2d76 616c7565| foo..label-value 000001b0
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 000001c0
|62617212 0b6f7468 65722d76 616c7565| bar..other-value 000001d0
|224208e9 ec061003 1a127333 3a2f2f62| "B........s3://b 000001e0
|75636b65 742f7072 65666978 220308ac| ucket/prefix"... 000001f0
|02320708 3e1080e5 9a773a18 50617468| .2..>....w:.Path 00000200
|7b7b506f 73746669 782e5465 6d706c61| {{Postfix.Templa 00000210
|74657d7d 300438cf b0f5015a 117b2272| te}}0.8....Z.{"r 00000220
|65616422 3a227363 68656d61 227d2003| ead":"schema"} . 00000230
|2a166125 32466364 63253246 7461626c| *.a%2Fcdc%2Ftabl 00000240
|652b6261 7a2e7633 28ac0232 80010a0e| e+baz.v3(..2.... 00000250
|73686172 642f7465 6d706c61 74651a0f| shard/template.. 00000260
|7265636f 76657279 2f707265 66697822| recovery/prefix" 00000270
|0b68696e 742f7072 65666978 28033202| .hint/prefix(.2. 00000280
|083c4801 52400a1e 0a0f6573 74756172| .<H.R@....estuar 00000290
|792e6465 762f666f 6f120b6c 6162656c| y.dev/foo..label 000002a0
|2d76616c 75650a1e 0a0f6573 74756172| -value....estuar 000002b0
|792e6465 762f6261 72120b6f 74686572| y.dev/bar..other 000002c0
|2d76616c 7565608c dc0268e9 ec063a38| -value`...h...:8 000002d0
|0a117265 636f7665 72792f74 656d706c| ..recovery/templ 000002e0
|61746510 03222108 80804010 041a1473| ate.."!...@....s 000002f0
|333a2f2f 6275636b 65742f72 65636f76| 3://bucket/recov 00000300
|65727922 0308ac02 420c0890 3f120568| ery"....B...?..h 00000310
|74747073 18014203 08a84652 11746573| ttps..B...FR.tes 00000320
|742d6361 70747572 652d7361 6c745a0a| t-capture-saltZ. 00000330
|32303235 2d30372d 30396a28 0a0f6163| 2025-07-09j(..ac 00000340
|6d65436f 2f706173 73776f72 6412152f| meCo/password../ 00000350
|63726564 656e7469 616c732f 70617373| credentials/pass 00000360
|776f7264 6a150a13 61636d65 436f2f77| wordj...acmeCo/w 00000370
|686f6c65 2d636f6e 66696772 2e080112| hole-configr.... 00000380
|2a0a1261 70692e61 636d6563 6f2e6578| *..api.acmeco.ex 00000390
|616d706c 650a142a 2e737663 2e61636d| ample..*.svc.acm 000003a0
|65636f2e 6578616d 706c6512 0b31313a| eco.example..11: 000003b0
|32323a33 333a3434 1a141533 2211001d| 22:33:44...3"... 000003c0
|77665544 25bbaa99 882dffee ddcc221a| wfUD%....-....". 000003d0
|7b22636f 6e6e6563 746f7222 3a7b2273| {"connector":{"s 000003e0
|74617465 223a3432 7d7d2a2d 7b22656e| tate":42}}*-{"en 000003f0
|63727970 74656422 3a226332 566a636d| crypted":"c2Vjcm 00000400
|5630222c 22736f70 73223a7b 226d6163| V0","sops":{"mac 00000410
|223a2261 6263227d 7d|                ":"abc"}}        00000420
                                                       00000429

// acknowledge
|32020820|                            2..              00000000
                                                       00000004

// internal
|a2060612 02486918 01|                .....Hi..        00000000
                                                       00000009
