crates/proto-flow/tests/snapshots/regression__capture_response_json.snap
---
source: crates/proto-flow/tests/regression.rs
expression: json_catalogue(ex_capture_responses())
---
// spec
{
  "spec": {
    "protocol": 3032023,
    "configSchema": {"config":"schema"},
    "resourceConfigSchema": {"resource":"schema"},
    "documentationUrl": "https://example/docs",
    "oauth2": {
      "provider": "oauth-provider",
      "authUrlTemplate": "https://auth-url",
      "accessTokenUrlTemplate": "https://access-token",
      "accessTokenMethod": "POST",
      "accessTokenBody": "foo",
      "accessTokenHeaders": {
        "hdr-one": {"hello":"hdr"},
        "hdr-two": 42.5
      },
      "accessTokenResponseMap": {
        "foo": true,
        "key": "value"
      },
      "refreshTokenUrlTemplate": "https://refresh-token",
      "refreshTokenMethod": "POST",
      "refreshTokenBody": "refresh!",
      "refreshTokenHeaders": {
        "hdr-three": {"refresh":"hdr"}
      },
      "refreshTokenResponseMap": {
        "access": "here"
      }
    },
    "resourcePathPointers": [
      "/stream"
    ]
  }
}

// discovered
{
  "discovered": {
    "bindings": [
      {
        "recommendedName": "recommended name",
        "resourceConfig": {"resource":1234},
        "documentSchema": {"doc":"schema"},
        "key": [
          "/key/ptr"
        ],
        "disable": true,
        "resourcePath": [
          "1234"
        ]
      }
    ]
  }
}

// validated
{
  "validated": {
    "bindings": [
      {
        "resourcePath": [
          "some",
          "path"
        ]
      }
    ],
    "generatedFiles": {
      "file:///project/root/uv.lock": "version = 1"
    }
  }
}

// applied
{
  "applied": {
    "actionDescription": "I did some stuff",
    "state": {
      "updated": {"state":"update"},
      "mergePatch": true
    }
  }
}

// opened
{
  "opened": {
    "explicitAcknowledgements": true
  }
}

// captured
{
  "captured": {
    "binding": 2,
    "doc": {"captured":"doc"}
  }
}

// sourced_schema
{
  "sourcedSchema": {
    "binding": 3,
    "documentSchema": {"format":"date-time","type":"string"}
  }
}

// checkpoint
{
  "checkpoint": {
    "state": {
      "updated": {"state":"update"},
      "mergePatch": true
    }
  }
}

// backfill_begin
{
  "backfillBegin": {
    "binding": 4
  }
}

// backfill_complete
{
  "backfillComplete": {
    "binding": 5
  }
}

// internal
{
  "$internal": "EgJIaRgB"
}
