crates/proto-flow/tests/snapshots/regression__capture_response_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_catalogue(ex_capture_responses())
---
// spec
|0ab90208 d787b901 12137b22 636f6e66| ..........{"conf 00000000
|6967223a 22736368 656d6122 7d1a157b| ig":"schema"}..{ 00000010
|22726573 6f757263 65223a22 73636865| "resource":"sche 00000020
|6d61227d 22146874 7470733a 2f2f6578| ma"}".https://ex 00000030
|616d706c 652f646f 63732ae6 010a0e6f| ample/docs*....o 00000040
|61757468 2d70726f 76696465 72121068| auth-provider..h 00000050
|74747073 3a2f2f61 7574682d 75726c1a| ttps://auth-url. 00000060
|14687474 70733a2f 2f616363 6573732d| .https://access- 00000070
|746f6b65 6e220366 6f6f2a1a 0a076864| token".foo*...hd 00000080
|722d6f6e 65120f7b 2268656c 6c6f223a| r-one..{"hello": 00000090
|22686472 227d2a0f 0a076864 722d7477| "hdr"}*...hdr-tw 000000a0
|6f120434 322e3532 0b0a0366 6f6f1204| o..42.52...foo.. 000000b0
|74727565 320e0a03 6b657912 07227661| true2...key.."va 000000c0
|6c756522 3a156874 7470733a 2f2f7265| lue":.https://re 000000d0
|66726573 682d746f 6b656e42 08726566| fresh-tokenB.ref 000000e0
|72657368 214a1e0a 09686472 2d746872| resh!J...hdr-thr 000000f0
|65651211 7b227265 66726573 68223a22| ee..{"refresh":" 00000100
|68647222 7d52100a 06616363 65737312| hdr"}R...access. 00000110
|06226865 7265225a 04504f53 54620450| ."here"Z.POSTb.P 00000120
|4f535432 072f7374 7265616d|          OST2./stream     00000130
                                                       0000013c

// discovered
|124b0a49 0a107265 636f6d6d 656e6465| .K.I..recommende 00000000
|64206e61 6d651211 7b227265 736f7572| d name..{"resour 00000010
|6365223a 31323334 7d1a107b 22646f63| ce":1234}..{"doc 00000020
|223a2273 6368656d 61227d22 082f6b65| ":"schema"}"./ke 00000030
|792f7074 72280132 04313233 34|       y/ptr(.2.1234    00000040
                                                       0000004d

// validated
|1a3b0a0c 0a04736f 6d650a04 70617468| .;....some..path 00000000
|122b0a1c 66696c65 3a2f2f2f 70726f6a| .+..file:///proj 00000010
|6563742f 726f6f74 2f75762e 6c6f636b| ect/root/uv.lock 00000020
|120b7665 7273696f 6e203d20 31|       ..version = 1    00000030
                                                       0000003d

// applied
|222a0a10 49206469 6420736f 6d652073| "*..I did some s 00000000
|74756666 12160a12 7b227374 61746522| tuff....{"state" 00000010
|3a227570 64617465 227d1001|          :"update"}..     00000020
                                                       0000002c

// opened
|2a020801|                            *...             00000000
                                                       00000004

// captured
|32160802 12127b22 63617074 75726564| 2.....{"captured 00000000
|223a2264 6f63227d|                   ":"doc"}         00000010
                                                       00000018

// sourced_schema
|422a0803 12267b22 666f726d 6174223a| B*...&{"format": 00000000
|22646174 652d7469 6d65222c 22747970| "date-time","typ 00000010
|65223a22 73747269 6e67227d|          e":"string"}     00000020
                                                       0000002c

// checkpoint
|3a180a16 0a127b22 73746174 65223a22| :.....{"state":" 00000000
|75706461 7465227d 1001|              update"}..       00000010
                                                       0000001a

// backfill_begin
|4a020804|                            J...             00000000
                                                       00000004

// backfill_complete
|52020805|                            R...             00000000
                                                       00000004

// internal
|a2060612 02486918 01|                .....Hi..        00000000
                                                       00000009
