crates/proto-flow/tests/snapshots/regression__capture_spec_json.snap
---
source: crates/proto-flow/tests/regression.rs
expression: json_test(msg)
---
{
  "name": "acmeCo/capture",
  "connectorType": "IMAGE",
  "config": {"capture":{"config":42}},
  "bindings": [
    {
      "resourceConfig": {"resource":"config"},
      "resourcePath": [
        "some",
        "path"
      ],
      "collection": {
        "name": "acmeCo/collection",
        "writeSchema": {"write":"schema"},
        "readSchema": {"read":"schema"},
        "key": [
          "/key/one",
          "/key/two"
        ],
        "uuidPtr": "/_meta/uuid",
        "partitionFields": [
          "type",
          "region"
        ],
        "projections": [
          {
            "ptr": "/json/ptr",
            "field": "a-field",
            "isPartitionKey": true,
            "inference": {
              "types": [
                "integer",
                "string"
              ],
              "string": {
                "contentType": "typ",
                "format": "date",
                "contentEncoding": "enc",
                "maxLength": 12345,
                "strMinimum": "100",
                "strMaximum": "18446744073709551615"
              },
              "title": "title",
              "description": "desc",
              "default": {"def":"ault"},
              "exists": "MUST",
              "numeric": {
                "hasMinimum": true,
                "minimum": -1000.0
              },
              "array": {
                "minItems": 10,
                "hasMaxItems": true,
                "maxItems": 20,
                "itemTypes": [
                  "null",
                  "integer"
                ]
              },
              "enum": [
                "const-one",
                "const-two"
              ],
              "reduce": "REDUCE_MERGE",
              "redact": "REDACT_SHA256",
              "contentMediaType": "typ"
            }
          }
        ],
        "ackTemplate": {"ack":"true"},
        "partitionTemplate": {
          "name": "partition/template",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "estuary.dev/foo",
                "value": "label-value"
              },
              {
                "name": "estuary.dev/bar",
                "value": "other-value"
              }
            ]
          },
          "fragment": {
            "length": "112233",
            "compressionCodec": "ZSTANDARD",
            "stores": [
              "s3://bucket/prefix"
            ],
            "refreshInterval": "300s",
            "flushInterval": "62.250s",
            "pathPostfixTemplate": "Path{{Postfix.Template}}"
          },
          "flags": 4,
          "maxAppendRate": "4020303"
        }
      },
      "backfill": 3,
      "stateKey": "a%2Fcdc%2Ftable+baz.v3"
    }
  ],
  "intervalSeconds": 300,
  "shardTemplate": {
    "id": "shard/template",
    "recoveryLogPrefix": "recovery/prefix",
    "hintPrefix": "hint/prefix",
    "hintBackups": 3,
    "maxTxnDuration": "60s",
    "hotStandbys": 1,
    "labels": {
      "labels": [
        {
          "name": "estuary.dev/foo",
          "value": "label-value"
        },
        {
          "name": "estuary.dev/bar",
          "value": "other-value"
        }
      ]
    },
    "ringBufferSize": 44556,
    "readChannelSize": 112233
  },
  "recoveryLogTemplate": {
    "name": "recovery/template",
    "replication": 3,
    "fragment": {
      "length": "1048576",
      "compressionCodec": "SNAPPY",
      "stores": [
        "s3://bucket/recovery"
      ],
      "refreshInterval": "300s"
    }
  },
  "networkPorts": [
    {
      "number": 8080,
      "protocol": "https",
      "public": true
    },
    {
      "number": 9000
    }
  ],
  "redactSalt": "dGVzdC1jYXB0dXJlLXNhbHQ=",
  "createdAt": "2025-07-09",
  "secrets": {
    "acmeCo/password": "/credentials/password",
    "acmeCo/whole-config": ""
  },
  "execution": {
    "vmm": true
  }
}
