crates/proto-flow/tests/snapshots/regression__capture_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a0e6163 6d65436f 2f636170 74757265| ..acmeCo/capture 00000000
|10071a19 7b226361 70747572 65223a7b| ....{"capture":{ 00000010
|22636f6e 66696722 3a34327d 7d22a204| "config":42}}".. 00000020
|0a157b22 7265736f 75726365 223a2263| ..{"resource":"c 00000030
|6f6e6669 67227d12 04736f6d 65120470| onfig"}..some..p 00000040
|6174681a e2030a11 61636d65 436f2f63| ath.....acmeCo/c 00000050
|6f6c6c65 6374696f 6e1a082f 6b65792f| ollection../key/ 00000060
|6f6e651a 082f6b65 792f7477 6f220b2f| one../key/two"./ 00000070
|5f6d6574 612f7575 69642a04 74797065| _meta/uuid*.type 00000080
|2a067265 67696f6e 32c0010a 092f6a73| *.region2..../js 00000090
|6f6e2f70 74721207 612d6669 656c6420| on/ptr..a-field  000000a0
|0132a701 0a07696e 74656765 720a0673| .2....integer..s 000000b0
|7472696e 671a2e1a 03747970 22046461| tring....typ".da 000000c0
|746530b9 603a0365 6e634203 3130304a| te0.`:.encB.100J 000000d0
|14313834 34363734 34303733 37303935| .184467440737095 000000e0
|35313631 35220574 69746c65 2a046465| 51615".title*.de 000000f0
|7363320e 7b226465 66223a22 61756c74| sc2.{"def":"ault 00000100
|227d4001 4a0b0801 11000000 0000408f| "}@.J.........@. 00000110
|c0521508 0a100118 1422046e 756c6c22| .R.......".null" 00000120
|07696e74 65676572 5a0b2263 6f6e7374| .integerZ."const 00000130
|2d6f6e65 225a0b22 636f6e73 742d7477| -one"Z."const-tw 00000140
|6f226006 68037203 7479703a 0e7b2261| o"`.h.r.typ:.{"a 00000150
|636b223a 22747275 65227d42 127b2277| ck":"true"}B.{"w 00000160
|72697465 223a2273 6368656d 61227d4a| rite":"schema"}J 00000170
|a3010a12 70617274 6974696f 6e2f7465| ....partition/te 00000180
|6d706c61 74651003 1a400a1e 0a0f6573| mplate...@....es 00000190
|74756172 792e6465 762f666f 6f120b6c| tuary.dev/foo..l 000001a0
|6162656c 2d76616c 75650a1e 0a0f6573| abel-value....es 000001b0
|74756172 792e6465 762f6261 72120b6f| tuary.dev/bar..o 000001c0
|74686572 2d76616c 75652242 08e9ec06| ther-value"B.... 000001d0
|10031a12 73333a2f 2f627563 6b65742f| ....s3://bucket/ 000001e0
|70726566 69782203 08ac0232 07083e10| prefix"....2..>. 000001f0
|80e59a77 3a185061 74687b7b 506f7374| ...w:.Path{{Post 00000200
|6669782e 54656d70 6c617465 7d7d3004| fix.Template}}0. 00000210
|38cfb0f5 015a117b 22726561 64223a22| 8....Z.{"read":" 00000220
|73636865 6d61227d 20032a16 61253246| schema"} .*.a%2F 00000230
|63646325 32467461 626c652b 62617a2e| cdc%2Ftable+baz. 00000240
|763328ac 02328001 0a0e7368 6172642f| v3(..2....shard/ 00000250
|74656d70 6c617465 1a0f7265 636f7665| template..recove 00000260
|72792f70 72656669 78220b68 696e742f| ry/prefix".hint/ 00000270
|70726566 69782803 3202083c 48015240| prefix(.2..<H.R@ 00000280
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 00000290
|666f6f12 0b6c6162 656c2d76 616c7565| foo..label-value 000002a0
|0a1e0a0f 65737475 6172792e 6465762f| ....estuary.dev/ 000002b0
|62617212 0b6f7468 65722d76 616c7565| bar..other-value 000002c0
|608cdc02 68e9ec06 3a380a11 7265636f| `...h...:8..reco 000002d0
|76657279 2f74656d 706c6174 65100322| very/template.." 000002e0
|21088080 4010041a 1473333a 2f2f6275| !...@....s3://bu 000002f0
|636b6574 2f726563 6f766572 79220308| cket/recovery".. 00000300
|ac02420c 08903f12 05687474 70731801| ..B...?..https.. 00000310
|420308a8 46521174 6573742d 63617074| B...FR.test-capt 00000320
|7572652d 73616c74 5a0a3230 32352d30| ure-saltZ.2025-0 00000330
|372d3039 6a280a0f 61636d65 436f2f70| 7-09j(..acmeCo/p 00000340
|61737377 6f726412 152f6372 6564656e| assword../creden 00000350
|7469616c 732f7061 7373776f 72646a15| tials/passwordj. 00000360
|0a136163 6d65436f 2f77686f 6c652d63| ..acmeCo/whole-c 00000370
|6f6e6669 67722e08 01122a0a 12617069| onfigr....*..api 00000380
|2e61636d 65636f2e 6578616d 706c650a| .acmeco.example. 00000390
|142a2e73 76632e61 636d6563 6f2e6578| .*.svc.acmeco.ex 000003a0
|616d706c 65|                         ample            000003b0
                                                       000003b5
